# turtle-rpm

./: .gitignore  README.md  app.py  pattern-recognition-leadership-canslim-plan.md  pyproject.toml  research.md  sepa-base-detection-plan.md  sepa-current-base-and-buy-point-plan.md
data/: mpa-superscreen-2026-02-26.csv  mpa-superscreen-2026-02-27.csv  symbols.csv
data/pivot_scan/: pivot_breakouts_tomorrow_20260226.csv  pivot_breakouts_tomorrow_20260228.csv  pivot_scan_full_20260226.csv  pivot_scan_full_20260228.csv
docs/: argx-low-cheat-base-detection-plan.md
notebooks/: sepa_entry_points.ipynb
notebooks/.ipynb_checkpoints/: sepa_entry_analysis-checkpoint.ipynb
pages/: 1_position_builder.py  1_specific_entry_point_analysis.py  2_pivot_breakouts.py  2_position_manager.py  3_portfolio.py  4_orders.py  5_big_picture.py  home.py
scripts/: diagnose_bases.py  download_symbols.py  pivot_breakout_scan.py
tests/: test_big_picture.py  test_liquidity.py  test_position_builder.py  test_sepa.py  test_symbols.py
turtle_rpm/: __init__.py  big_picture.py  canslim.py  etrade_orders.py  leadership.py  liquidity.py  pivot_scan.py  sepa.py  symbols.py
