[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle-rpm"
version = "0.1.0"
description = "Risk and portfolio management tool for the Turtle trading system"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.36.0",
    "streamlit-searchbox>=0.1.20",
    "requests-oauthlib>=1.3.1",
    "yfinance>=1.2.0",
    "streamlit-lightweight-charts>=0.7.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["turtle_rpm*"]
